Report progress on snaps

BUG: 388916